Botones Home, Menu

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
           <div class="contenido-personaje-texto">
           
-          <a href="#" class="open"><img class="personaje" src="assets/svg/personaje.svg" alt=""></a>
+          <a href="" class=""><img class="personaje" src="assets/svg/personaje.svg" alt=""></a>
           <div id="wrap"> 
           <h3>Sergio Cubas Bernal  <span></span> </h3>
           </div>
@@ -212,7 +212,7 @@
             <div class="contenido-inicio">
                 <a href="index.html">
                 <figure class="figure inicio">
-                  <img class="icon-inicio" src="assets/svg/llamada.svg" alt="">
+                  <img class="icon-inicio" src="assets/svg/home.svg" alt="">
                 </figure>
                 </a>
               </div>
@@ -223,15 +223,17 @@
                 <a href="tel:+51983462077">
                 <figure class="figure llamada">
                   <img class="icon-llamada" src="assets/svg/llamada.svg" alt="">
+
                 </figure>
                 </a>
               </div>
 
 
               <div class="contenido-boton">
-                <a href="tel:+51983462077">
+                <a href="#" class="open">
                 <figure class="figure boton">
-                  <img class="icon-boton" src="assets/svg/llamada.svg" alt="">
+                  <img class="icon-boton" src="assets/svg/menu.svg" alt="">
+
                 </figure>
                 </a>
               </div>
