--- a/index.html
+++ b/index.html
@@ -58,6 +58,19 @@
     <div class="container-fluid fondo">
       <div class="row">
         <div class="col-xl-3 col-lg-3 col-md-2 col-sm-12 col-12 responsive-completo contenido-datos">
+
+          <div style="    width: 50%;
+    margin: auto; color:black;
+    height: 90%;
+    display: grid;" class="contenido-boton">
+            <a href="#" class="open">
+            <figure class="figure boton">
+              <i style="color: black; font-size:35px;" class="fas fa-bars"></i>
+
+            </figure>
+            </a>
+          </div>
+
           <div class="contenido-redes">
 
             <a href="https://github.com/SergioCubasB" target="_blank">
