--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     margin: auto; color:black;
     height: 90%;
     display: grid;" class="contenido-boton">
-            <a href="#" class="open">
+            <a href="#" class="open2">
             <figure class="figure boton">
               <i style="color: black; font-size:35px;" class="fas fa-bars"></i>
 
