Quitar enlace personaje

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
           <div class="contenido-personaje-texto">
           
-          <a href="" class=""><img class="personaje" src="assets/svg/personaje.svg" alt=""></a>
+          <img class="personaje" src="assets/svg/personaje.svg" alt="">
           <div id="wrap"> 
           <h3>Sergio Cubas Bernal  <span></span> </h3>
           </div>
