--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 
 
-    <div class="container-fluid fondo">
-      <div class="row">
+    <div class="container-fluid p-0 fondo">
+      <div class="row m-0">
         <div class="col-xl-3 col-lg-3 col-md-2 col-sm-12 col-12 responsive-completo contenido-datos">
 
           <div style="    width: 50%;
