--- a/portafolio.html
+++ b/portafolio.html
@@ -71,7 +71,7 @@
         </a>
 
         <div class="card-body">
-          <p class="card-text">Desarrollo web completo</p>
+          <p class="card-text">Habilidades utilizados</p>
           <div class="d-flex justify-content-between align-items-center">
             <div class="contenido-badge">
               <small class="badge badge-warning">PHP</small>
@@ -98,7 +98,7 @@
                 </a>
 
                 <div class="card-body">
-                  <p class="card-text">Desarrollo web completo</p>
+                  <p class="card-text">Habilidades utilizados</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="contenido-badge">
               <small class="badge badge-warning">PHP</small>
@@ -125,7 +125,7 @@
                 </a>
 
                 <div class="card-body">
-                  <p class="card-text">Desarrollo web completo</p>
+                  <p class="card-text">Habilidades utilizados</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="contenido-badge">
               <small class="badge badge-warning">PHP</small>
@@ -151,7 +151,7 @@
                 </a>
 
                 <div class="card-body">
-                  <p class="card-text">Desarrollo web completo</p>
+                  <p class="card-text">Habilidades utilizados</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="contenido-badge">
               <small class="badge badge-warning">PHP</small>
@@ -177,7 +177,7 @@
                 </a>
 
                 <div class="card-body">
-                  <p class="card-text">Desarrollo web completo</p>
+                  <p class="card-text">Habilidades utilizados</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="contenido-badge">
               <small class="badge badge-warning">PHP</small>
@@ -203,7 +203,7 @@
                 </a>
 
                 <div class="card-body">
-                  <p class="card-text">Desarrollo web completo</p>
+                  <p class="card-text">Habilidades utilizados</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="contenido-badge">
               <small class="badge badge-warning">PHP</small>
@@ -229,7 +229,7 @@
                 </a>
 
                 <div class="card-body">
-                  <p class="card-text">Desarrollo web completo</p>
+                  <p class="card-text">Habilidades utilizados</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="contenido-badge">
               <small class="badge badge-warning">PHP</small>
