--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#FFB000" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Inicio</title>
     
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
@@ -17,6 +18,7 @@
 
   </head>
   <body  onload="mostrarSaludo()">
+
 
 
 <!-- Modal -->
@@ -313,7 +315,36 @@
 
   <script src="assets/js/logica.js"></script>
 
+
+
+
   <script>
+
+$('body').mouseover(function(){
+  $(this).css({cursor: 'none'});
+});
+
+$(document).on('mousemove', function(e){
+  $('#cursor').css({
+    left:  e.pageX,
+    top:   e.pageY
+  });
+});
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 function mostrarSaludo(){
  
   fecha = new Date(); 
