Agregado de pestaña Acerca de mí, libreria slick, parrallax

--- a/index.html
+++ b/index.html
@@ -172,19 +172,13 @@
             <div class="dialog-content">
 
               <div class="contenido-icons-modal">
-                <a href="#">
+                <a href="about.html">
                   <div class="icons">
                     <img class="icon-modal" src="assets/svg/about-me.svg" alt="">
-                    <h3>¿Quien soy?</h3>
+                    <h3>Acerca de mí</h3>
                   </div>
                 </a>
                 
-                <a href="#">
-                <div class="icons">
-                  <img class="icon-modal" src="assets/svg/skills.svg" alt="">
-                  <h3>Habilidades</h3>
-                </div>
-                </a>
                 
                 <a href="portafolio.html">
                 <div class="icons">
