Agregando logos de skills

--- a/about.html
+++ b/about.html
@@ -76,17 +76,25 @@
             <h1 class="display-3"><img class="icon-modal-about" src="assets/svg/skills2.svg" alt="">Habilidades</h1>
 
             <div class="thing" id="wrapper">
-              <div><img src="assets/svg/behance.svg" alt=""></div>
-              <div><img src="assets/svg/behance.svg" alt=""></div>
-              <div><img src="assets/svg/behance.svg" alt=""></div>
-              <div><img src="assets/svg/behance.svg" alt=""></div>
-              <div><img src="assets/svg/behance.svg" alt=""></div>
-              <div><img src="assets/svg/behance.svg" alt=""></div>
-              <div><img src="assets/svg/behance.svg" alt=""></div>
-              <div><img src="assets/svg/behance.svg" alt=""></div>
-
+              <div><img src="assets/svg/logo/angular.png" alt=""></div>
+              <div><img src="assets/svg/logo/bootstrap.png" alt=""></div>
+              <div><img src="assets/svg/logo/css3.png" alt=""></div>
+              <div><img src="assets/svg/logo/git.png" alt=""></div>
+              <div><img src="assets/svg/logo/html5.png" alt=""></div>
+              <div><img src="assets/svg/logo/java.png" alt=""></div>
+              <div><img src="assets/svg/logo/javascript.png" alt=""></div>
+              <div><img src="assets/svg/logo/jquery.png" alt=""></div>
+              <div><img src="assets/svg/logo/laravel.png" alt=""></div>
+              <div><img src="assets/svg/logo/mysql.png" alt=""></div>
+              <div><img src="assets/svg/logo/oracle.png" alt=""></div>
+              <div><img src="assets/svg/logo/wordpress.png" alt=""></div>
             </div>
 
+            <div class="thing2" id="wrapper">
+              <div><img src="assets/svg/logo/ps.png" alt=""></div>
+              <div><img src="assets/svg/logo/ai.png" alt=""></div>
+              <div><img src="assets/svg/logo/xd.png" alt=""></div>
+            </div>
 
         </div>  
           
@@ -170,6 +178,13 @@
 
 <script type="text/javascript">
 $('.thing').slick({
+  slidesToShow: 8,
+  slidesToScroll: 1,
+  autoplay: true,
+  autoplaySpeed: 1000,
+});
+
+$('.thing2').slick({
   slidesToShow: 8,
   slidesToScroll: 1,
   autoplay: true,
