--- a/about.html
+++ b/about.html
@@ -76,18 +76,18 @@
             <h1 class="display-3"><img class="icon-modal-about" src="assets/svg/skills2.svg" alt="">Habilidades</h1>
 
             <div class="thing" id="wrapper">
-              <div><img src="assets/svg/logo/angular.png" alt=""></div>
-              <div><img src="assets/svg/logo/bootstrap.png" alt=""></div>
-              <div><img src="assets/svg/logo/css3.png" alt=""></div>
-              <div><img src="assets/svg/logo/git.png" alt=""></div>
-              <div><img src="assets/svg/logo/html5.png" alt=""></div>
-              <div><img src="assets/svg/logo/java.png" alt=""></div>
-              <div><img src="assets/svg/logo/javascript.png" alt=""></div>
-              <div><img src="assets/svg/logo/jquery.png" alt=""></div>
-              <div><img src="assets/svg/logo/laravel.png" alt=""></div>
-              <div><img src="assets/svg/logo/mysql.png" alt=""></div>
-              <div><img src="assets/svg/logo/oracle.png" alt=""></div>
-              <div><img src="assets/svg/logo/wordpress.png" alt=""></div>
+              <div><img src="assets/svg/logos/angular.png" alt=""></div>
+              <div><img src="assets/svg/logos/bootstrap.png" alt=""></div>
+              <div><img src="assets/svg/logos/css3.png" alt=""></div>
+              <div><img src="assets/svg/logos/git.png" alt=""></div>
+              <div><img src="assets/svg/logos/html5.png" alt=""></div>
+              <div><img src="assets/svg/logos/java.png" alt=""></div>
+              <div><img src="assets/svg/logos/javascript.png" alt=""></div>
+              <div><img src="assets/svg/logos/jquery.png" alt=""></div>
+              <div><img src="assets/svg/logos/laravel.png" alt=""></div>
+              <div><img src="assets/svg/logos/mysql.png" alt=""></div>
+              <div><img src="assets/svg/logos/oracle.png" alt=""></div>
+              <div><img src="assets/svg/logos/wordpress.png" alt=""></div>
             </div>
 
             <div class="thing2" id="wrapper">
