Agregando logos de skills

--- a/about.html
+++ b/about.html
@@ -76,24 +76,25 @@
             <h1 class="display-3"><img class="icon-modal-about" src="assets/svg/skills2.svg" alt="">Habilidades</h1>
 
             <div class="thing" id="wrapper">
-              <div><img src="assets/svg/logos/angular.png" alt=""></div>
+              <div><img src="assets/svg/logos/wordpress.png" alt=""></div>
               <div><img src="assets/svg/logos/bootstrap.png" alt=""></div>
-              <div><img src="assets/svg/logos/css3.png" alt=""></div>
-              <div><img src="assets/svg/logos/git.png" alt=""></div>
+              <div><img src="assets/svg/logos/angular.png" alt=""></div>
               <div><img src="assets/svg/logos/html5.png" alt=""></div>
-              <div><img src="assets/svg/logos/java.png" alt=""></div>
+              <div><img src="assets/svg/logos/css3.png" alt=""></div>
               <div><img src="assets/svg/logos/javascript.png" alt=""></div>
               <div><img src="assets/svg/logos/jquery.png" alt=""></div>
               <div><img src="assets/svg/logos/laravel.png" alt=""></div>
+              <div><img src="assets/svg/logos/git.png" alt=""></div>
+              <div><img src="assets/svg/logos/java.png" alt=""></div>
               <div><img src="assets/svg/logos/mysql.png" alt=""></div>
               <div><img src="assets/svg/logos/oracle.png" alt=""></div>
-              <div><img src="assets/svg/logos/wordpress.png" alt=""></div>
+              
             </div>
 
             <div class="thing2" id="wrapper">
-              <div><img src="assets/svg/logo/ps.png" alt=""></div>
-              <div><img src="assets/svg/logo/ai.png" alt=""></div>
-              <div><img src="assets/svg/logo/xd.png" alt=""></div>
+              <div><img src="assets/svg/logos/ai.png" alt=""></div>
+              <div><img src="assets/svg/logos/ps.png" alt=""></div>
+              <div><img src="assets/svg/logos/xd.png" alt=""></div>
             </div>
 
         </div>  
