Actualización clases bootstrap

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <div class="cajon-secundario">
          <h1 class="display-3"><img class="icon-modal-about" src="assets/svg/about-me2.svg" alt="">Acerca de mí</h1>
 
-          <p class="text-justify">Hola, soy estudiante de la carrera de Ingeniería de Sistemas, en la actualidad curso el 6to ciclo, pero estoy en constante crecimiento profesional.<br> <br>
+          <p class="pt-xl-0 pt-lg-0 pt-md-0 pt-sm-2 pt-1 text-justify">Hola, soy estudiante de la carrera de Ingeniería de Sistemas, en la actualidad curso el 6to ciclo, pero estoy en constante crecimiento profesional.<br> <br>
           En paralelo me encuentro estudiando en otro centro como es la Universidad Nacional de Ingeniería y de manera online en las plataformas (Platzi - Crehana) para así poder incrementar conocimiento; siempre he buscado oportunidades y distintos desafíos que sean significativos para mí, nunca he dejado de comprometer mi pasión por aprender y resolver problemas mientras desarrollo un proyecto.
           </p>
 
@@ -75,7 +75,7 @@
           <div class="skills cajon-secundario">
             <h1 class="display-3"><img class="icon-modal-about" src="assets/svg/skills2.svg" alt="">Habilidades</h1>
 
-            <div class="thing" id="wrapper">
+            <div class="thing pt-xl-1 pt-lg-5 pt-md-4 pt-sm-0 pt-0 " id="wrapper">
               <div><img src="assets/svg/logos/wordpress.png" alt=""></div>
               <div><img src="assets/svg/logos/bootstrap.png" alt=""></div>
               <div><img src="assets/svg/logos/angular.png" alt=""></div>
