--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
   </head>
-  <body  onload="mostrarSaludo()">
+  <body>
 
 
 
-<!-- Modal -->
+<!-- Modal   onload="mostrarSaludo()" -->
     <div class="modal fade" id="myModal" role="dialog" style="display: none; padding-right: 17px; background: #ffa502;">
       <div class="modal-dialog"><!-- Modal content-->
       <div class="modal-content">
