--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </figure>
             </a>
 
-            <a href="https://www.facebook.com/sergio.cubas.39" target="_blank">
+            <a href="#" target="_blank">
             <figure class="figure redes">
               <img class="icon-redes" src="assets/svg/facebook.svg" alt="">
             </figure>
@@ -228,7 +228,7 @@
             </figure>
             </a>
 
-            <a href="https://www.facebook.com/sergio.cubas.39" target="_blank">
+            <a href="#" target="_blank">
             <figure class="figure redes">
               <img class="icon-redes" src="assets/svg/facebook.svg" alt="">
             </figure>
