--- a/portafolio.html
+++ b/portafolio.html
@@ -355,7 +355,7 @@
         <div class="mt-5 text-center">
 
           <!-- Facebook -->
-          <a href="https://github.com/SergioCubasB" target="_blank" class="fb-ic">
+          <a href="#" target="_blank" class="fb-ic">
             <img class="icon-redes" src="assets/svg/github.svg" alt="">
           </a>
           <!-- Twitter -->
@@ -363,7 +363,7 @@
             <img class="icon-redes" src="assets/svg/linkendin.svg" alt="">
           </a>
           <!-- Google +-->
-          <a href="https://www.facebook.com/sergio.cubas.39" target="_blank" class="gplus-ic">
+          <a href="#" target="_blank" class="gplus-ic">
             <img class="icon-redes" src="assets/svg/facebook.svg" alt="">
           </a>
           <!--Linkedin -->
