--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
                 <a href="index.html"><h5>Regresar al inicio</h5></a>
 
                 <!-- Facebook -->
-                <a href="https://github.com/SergioCubasB" target="_blank" class="fb-ic">
+                <a href="#" target="_blank" class="fb-ic">
                   <img class="icon-redes" src="assets/svg/github.svg" alt="">
                 </a>
                 <!-- Twitter -->
@@ -128,7 +128,7 @@
                   <img class="icon-redes" src="assets/svg/linkendin.svg" alt="">
                 </a>
                 <!-- Google +-->
-                <a href="https://www.facebook.com/sergio.cubas.39" target="_blank" class="gplus-ic">
+                <a href="#" target="_blank" class="gplus-ic">
                   <img class="icon-redes" src="assets/svg/facebook.svg" alt="">
                 </a>
                 <!--Linkedin -->
