--- a/pruebas.html
+++ b/pruebas.html
@@ -890,8 +890,13 @@ al </span>Festival Viva la Salsa 2019</h1>
 <section class="form" data-formkey="form-unica-promociones-7">
 <section id="registerForm" class="form-horizontal">
 <div class="label-content"><label class="leftquitado">
+
 <div class="iconos-form relativo-img"><img src="https://cdn.agilitycms.com/scotiabank-peru/CrediScotia/2019/landings/user2.png" /></div>
 <input class="ancho-input" name="firstName" data-val="true" data-val-required="Este campo es obligatorio" data-val-regex="Por favor, escriba un nombre correcto" data-val-regex-pattern="^[-A-Za-z&Aacute;&aacute;&Eacute;&eacute;&Iacute;&iacute;&Ntilde;&ntilde;&Oacute;&oacute;&Uacute;&uacute;&Uuml;&uuml;PA&agrave;&aacute;&acirc;&Agrave;&Aacute;&Acirc;C&ccedil;&Ccedil;E&eacute;&egrave;&ecirc;&euml;&Eacute;&Egrave;&Ecirc;&Euml;I&icirc;&iuml;&Icirc;&Iuml;O&oacute;&ocirc;&Oacute;&Ocirc;&cent;&pound;&yen;PfU&ugrave;&ucirc;&Ugrave;&Ucirc;&AElig;&aelig;&AElig;OoO ']*$" placeholder="NOMBRES Y APELLIDOS" type="text" tabindex="2" /> <span data-valmsg-for="firstName" data-valmsg-replace="true" class="validation"></span> </label> <label class="rightquitado">
+
+<div class="hidden"><label> NOmbre: <input name="firstName" type="text" /> </label> <label> Email: <input name="emailAddress" type="text" /> </label> <label> Additional 1: <input name="additional1" type="text" /> </label> <label> Additional 3: <input name="additional3" type="text" /> </label> <label> Additional 4: <input name="additional4" type="text" /> </label> <label> Additional 5: <input name="additional5" type="text" /> </label> <!-- 	 <label> Additional 6: <input name="additional6" type="text" /> </label> 
+	 <label> Additional 7: <input name="additional7" type="text" /> </label> --></div>
+	 
 <div class="iconos-form relativo-img"><img src="https://cdn.agilitycms.com/scotiabank-peru/CrediScotia/2019/landings/id-card2.png" /></div>
 <select class="ancho-input select_doc">
 <option value="1" selected="selected">DNI</option>
